# sales-report

./: README.md  pyproject.toml  requirements.txt  sales-data.csv  salesReport.py  sales_data.csv
sales_report/: main.py
