[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laypatel13-sales-report"
version = "0.1.0"
description = "A colorful CLI tool to generate sales reports using Pandas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lay Patel", email = "lay.patel.1313@gmail.com"}
]
keywords = ["cli", "sales", "report", "pandas", "csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "pandas>=2.0.0",
    "colorama==0.4.6",
    "tabulate>=0.9.0",
]

[project.scripts]
sales-report = "sales_report.main:main"

[project.urls]
Homepage = "https://github.com/laypatel13/sales-report"